--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,4 @@
 {
-  "ignoreFiles":["**/node_modules/**/*.*"],"extends": "stylelint-config-standard";
+  "ignoreFiles":["**/node_modules/**/*.*"],
+  "extends": "stylelint-config-standard"
 }
