--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "built:css": "sass ./styles.scss ./styles.css",
     "lint": "run-p lint:*",
     "lint:html": "htmlhint ./**/*.html",
     "lint:css": "stylelint ./**/*.css",
@@ -20,6 +21,7 @@
     "htmlhint": "0.9.13",
     "husky": "0.14.3",
     "npm-run-all": "4.1.1",
+    "sass": "^1.3.2",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0"
   }
